--- a/Daily-Track/Daily-Track/Daily-Track.csproj
+++ b/Daily-Track/Daily-Track/Daily-Track.csproj
@@ -55,11 +55,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\AddEventos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddEventos.Designer.cs">
+      <DependentUpon>AddEventos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Admin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PrincipalAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PrincipalAdmin.Designer.cs">
+      <DependentUpon>PrincipalAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PrincipalStusent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PrincipalStusent.Designer.cs">
+      <DependentUpon>PrincipalStusent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Reservation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Reservation.Designer.cs">
+      <DependentUpon>Reservation.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\students.cs">
       <SubType>Form</SubType>
@@ -79,8 +103,20 @@
     <Compile Include="Models\username.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\AddEventos.resx">
+      <DependentUpon>AddEventos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PrincipalAdmin.resx">
+      <DependentUpon>PrincipalAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PrincipalStusent.resx">
+      <DependentUpon>PrincipalStusent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Reservation.resx">
+      <DependentUpon>Reservation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\students.resx">
       <DependentUpon>students.cs</DependentUpon>
@@ -123,6 +159,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Referencias\TextFile1.txt" />
+    <None Include="Resources\eventos.png" />
+    <None Include="Resources\avisoeven.png" />
+    <None Include="Resources\editar.png" />
+    <None Include="Resources\addevents.png" />
+    <None Include="Resources\ojoscl.png" />
+    <None Include="Resources\ojo1.png" />
+    <None Include="Resources\ojo %281%291.png" />
+    <None Include="Resources\BOTONSalir.png" />
+    <None Include="Resources\bottonclass.png" />
+    <None Include="Resources\bottonvirtual .png" />
+    <None Include="Resources\Bottonayuda.png" />
+    <None Include="Resources\Fondosuserandadmin .png" />
     <None Include="Resources\Fondosuser  %281%29.png" />
     <None Include="Resources\Fondosuser .png" />
     <None Include="Resources\Fondosinicio.png" />
