--- a/Daily-Track/Daily-Track/Daily-Track.csproj
+++ b/Daily-Track/Daily-Track/Daily-Track.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -109,6 +110,13 @@
     <Compile Include="Models\username.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\ReportParticipation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports\ReportParticipation.Designer.cs">
+      <DependentUpon>ReportParticipation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\ParticipationReport.cs" />
     <EmbeddedResource Include="Forms\AddEventos.resx">
       <DependentUpon>AddEventos.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +148,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reports\ReportParticipation.resx">
+      <DependentUpon>ReportParticipation.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -203,5 +214,6 @@
     <None Include="Resources\admin %281%29.png" />
     <None Include="Resources\admin.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
