--- a/Daily-Track/Daily-Track/Daily-Track.csproj
+++ b/Daily-Track/Daily-Track/Daily-Track.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dao\EventDao.cs" />
+    <Compile Include="Dao\ParticipationDao.cs" />
     <Compile Include="Files\File.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -106,6 +108,7 @@
     </Compile>
     <Compile Include="Models\Clubs.cs" />
     <Compile Include="Models\Events.cs" />
+    <Compile Include="Models\Participation.cs" />
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\username.cs" />
     <Compile Include="Program.cs" />
